fix version mobile scroll côté

--- a/css/styles.css
+++ b/css/styles.css
@@ -756,7 +756,8 @@ footer div ul li a {
         width:100%;
         padding-top:20px;
         margin:auto;
-        padding:0;  
+        padding:0;
+        min-width: 320px; 
     }
 
     .container {
@@ -770,20 +771,24 @@ footer div ul li a {
 
     header {
         display:flex;
-        width:auto;
+        width:100%;
         flex-wrap:wrap;
         justify-content: space-between;
+        line-height: ;
         }
     #barnav {
         text-align:right;
         padding-top:0px;
         order:2;
-        
+    }
+    #barnav ul {
+        margin:0;
+        margin-right:5%;
+        padding:0;  
     }
     .onlymobile {
         display:flex;
         order:3;
-        width:auto;
         justify-content: space-between;
         width:100%;
         
@@ -806,9 +811,7 @@ footer div ul li a {
     }
     #logo {
         order:1;
-        margin-left:20px;
-        
-        
+        margin-left:20px;   
     }
 
     #top{
@@ -846,7 +849,7 @@ footer div ul li a {
 
     }
     #buttons {
-        width:375px;
+        width:100%;
         flex-wrap:wrap;    
         padding:0px;
         margin:0;
@@ -873,7 +876,7 @@ footer div ul li a {
         word-wrap: break-word;
         margin:0;
         width:100%;
-        margin-right:25px;
+        margin-right:0px;
         height:25px;
         margin-bottom:40px;
         margin-left:10px;
@@ -885,7 +888,7 @@ footer div ul li a {
         box-sizing: border-box;
         flex-direction: column;
         width:100%;
-        
+        margin:auto;
         height:auto;
     }
     #hebergements article h3 {
@@ -903,8 +906,8 @@ footer div ul li a {
     }
 
     #hebergementcontent {
-        width:95%;
-        margin:auto;
+        width:100%;
+        margin:0 auto;
         flex-direction: column;
         padding:0px;
         padding-top:15px;
@@ -915,12 +918,14 @@ footer div ul li a {
         padding-left:20px;
     }
     .hotel{
-        width:325px;
+        box-sizing: border-box;
+        width:320px;
+        margin: 0 auto;
         margin-bottom:10px;
-        
+          
     }
     .hotelname {
-        width:310px;
+        width:300px;
         height:55px;
         padding:0;
         padding-top:15px;
@@ -934,7 +939,7 @@ footer div ul li a {
         
     }
     #cannebiere, #port, #mouettes, #mer, #panier, #amina {
-        width:325px
+        width:310px
     }
     #mer, #amina {
         background-size: cover;
@@ -982,12 +987,12 @@ footer div ul li a {
         margin:auto;
     }
     #activité a {
-        width:320px;
+        width:100%;
         height:190px;
         margin-bottom:20px;
     }
     #activité h3 {
-        width:320px;
+        width:100%;
     }
     footer {
         width:100%;
@@ -1002,6 +1007,7 @@ footer div ul li a {
         margin-bottom:20px;
     }
 }
+
 /*site fait à partir de 1440px, ceci permet de faire toute la largeur de l'écran si résolution supérieure à 1440px 
 et pouvant garder les proportions de la maquette si résolution inférieure*/
 
